# SomeSense-Interface

./: .gitignore  CMakeLists.txt  README.md  install_dependencies.sh
proto/: cam_calib.proto  camera.proto  common.proto  frame.proto  img.proto  inference.proto  meta_data.proto  object_detection.proto  point_cloud.proto  recmeta.proto  scheduler.proto  types.proto
